# Meridian

./: .gitignore  README.md  package.json
apps/api/: .env.example  alembic.ini  pyproject.toml
apps/api/migrations/: env.py
apps/api/migrations/versions/: 0001_initial.py  0002_widen_value_str.py
apps/api/src/meridian/: __init__.py  config.py  main.py
apps/api/src/meridian/adapters/: __init__.py  base.py  census_acs.py  realtor.py  zillow.py
apps/api/src/meridian/db/: __init__.py  session.py
apps/api/src/meridian/jobs/: compute_composites.py  ingest_census_acs.py  ingest_census_acs_bulk.py  ingest_realtor.py  ingest_zillow.py  seed_data.py  seed_db.py  seed_us_geographies.py
apps/api/src/meridian/models/: __init__.py  geography.py  metric.py
apps/api/src/meridian/routes/: geographies.py  health.py  snapshots.py  summaries.py
apps/api/src/meridian/services/: cache.py  snapshots.py
apps/web/: package-lock.json  package.json  tailwind.config.ts
apps/web/.claude/: launch.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: ComparisonView.tsx  CreditSummary.tsx  DemoPanel.tsx  FreshnessFooter.tsx  LeftRail.tsx  MapView.tsx  MetricRow.tsx  Panel.tsx  PriceTrendChart.tsx  PricingPanel.tsx  SignalCard.tsx  Sparkline.tsx  SupplyPanel.tsx  TopBar.tsx
apps/web/src/lib/: api.ts  format.ts  geo-crosswalk.ts  map-styling.ts  seed.ts
